# course_work_4

./: README.md  main.py  pyproject.toml
data/: vacancy.json
src/: utils.py  vacancies.py
